<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Login.Others">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="506dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="49dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_students_login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:background="#fff"
            android:textSize="30sp"
            android:layout_margin="15dp"
            android:autofillHints="" tools:targetApi="o"/>


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="#fff"
            android:textSize="30sp"
            android:layout_margin="15dp"
            android:hint="@string/email"
            android:importantForAutofill="no" tools:targetApi="o" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:background="#fff"
            android:textSize="30sp"
            android:layout_margin="15dp"
            android:hint="@string/password"
            android:importantForAutofill="no" tools:targetApi="o" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:background="#fff"
            android:textSize="30sp"
            android:layout_margin="15dp"
            android:hint="@string/phone_number"
            android:autofillHints="" tools:targetApi="o"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_click_here_to_signin"
            android:textColor="#fff"
            android:textAlignment="center"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>