<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.SecondPageMainActivity"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:text="@string/user_login"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_first" />

    <EditText
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:hint="Enter your Email "
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:hint="Enter your Password "
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />



    <Button
        android:layout_margin="15dp"
        android:text="@string/sign_in"
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forget password?"
        android:textAlignment="center"
        android:textColor="#000" />
    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_have_an_account_click_here_to_signup"
        android:textAlignment="center"
        android:textColor="#000"
        android:layout_marginTop="10dp"/>

</LinearLayout>